feat: add spotless config for all service